--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 mercyhacks<span class="logo-dot">.</span>
                             </div>
 
-                            <h1 id="mainTitle">Generate Cursor AI Key</h1>
+                            <h1 id="mainTitle">Generate Fusor AI Key</h1>
                             <p class="subtitle">Get instant access to our advanced AI platform with a unique generated
                                 key. Simple, secure, and ready to use.</p>
                             <button id="generateBtn" class="generate-btn" onclick="handleGenerate()">
@@ -50,15 +50,15 @@
                                 <div class="instructions-container">
                                     <h5>Installation Instructions:</h5>
                                     <ol class="instructions-list">
-                                        <li>Close Cursor completely</li>
+                                        <li>Close Fusor completely</li>
                                         <li>Navigate to the configuration file location:
                                             <ul class="path-list">
                                                 <li><strong>Windows:</strong>
-                                                    %APPDATA%\Cursor\User\globalStorage\storage.json</li>
+                                                    %APPDATA%\Fusor\User\globalStorage\storage.json</li>
                                                 <li><strong>macOS:</strong> ~/Library/Application
-                                                    Support/Cursor/User/globalStorage/storage.json</li>
+                                                    Support/Fusor/User/globalStorage/storage.json</li>
                                                 <li><strong>Linux:</strong>
-                                                    ~/.config/Cursor/User/globalStorage/storage.json</li>
+                                                    ~/.config/Fusor/User/globalStorage/storage.json</li>
                                             </ul>
                                         </li>
                                         <li>Create a backup of storage.json</li>
@@ -72,7 +72,7 @@
                                                 }
                                             </pre>
                                         </li>
-                                        <li>Save the file and restart Cursor</li>
+                                        <li>Save the file and restart Fusor</li>
                                     </ol>
                                 </div>
                             </div>
