--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
             <!-- Left Side Ad -->
             <aside class="col-md-2">
                 <div class="ad-space h-100">
-                    <div data-atrelate-zone=""></div>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '910d33cb9ac04e3a17c5cdc4e4e88342',
+                            'format' : 'iframe',
+                            'height' : 600,
+                            'width' : 160,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/910d33cb9ac04e3a17c5cdc4e4e88342/invoke.js"></script>
                 </div>
             </aside>
 
@@ -120,7 +129,16 @@
             <!-- Right Side Ad -->
             <aside class="col-md-2">
                 <div class="ad-space h-100">
-                    <div data-atrelate-zone=""></div>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '910d33cb9ac04e3a17c5cdc4e4e88342',
+                            'format' : 'iframe',
+                            'height' : 600,
+                            'width' : 160,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/910d33cb9ac04e3a17c5cdc4e4e88342/invoke.js"></script>
                 </div>
             </aside>
         </div>
