--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://mercyhacks.com/">
     <meta property="og:title" content="MercyHacks - Generate Crack Key | Free AI Key Generator">
     <meta property="og:description"
-        content="Generate free AI keys instantly for Crack platform. Quick, secure, and reliable key generation for advanced AI access.">
+        content="Generate free AI keys instantly to Crack platform. Quick, secure, and reliable key generation for advanced AI access.">
     <meta property="og:image" content="https://mercyhacks.com/images/og-image.jpg">
 
     <!-- Twitter -->
