--- a/hacks/cursorai.html
+++ b/hacks/cursorai.html
@@ -14,6 +14,8 @@
         content="AI key generator, Cursor AI, MercyHacks, AI platform access, free AI keys, AI development tools">
     <meta name="author" content="MercyHacks">
     <meta name="robots" content="index, follow">
+    <meta name="keywords"
+    content="Too many free trial accounts used on this machine. Please upgrade to pro. We have this limit in place to prevent abuse. Please let us know if you believe this is a mistake.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
