--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         content="Generate free AI keys instantly for Crack platform. Quick, secure, and reliable key generation for advanced AI access.">
     <meta name="keywords"
         content="AI key generator, Crack, MercyHacks, AI platform access, free AI keys, AI development tools">
+    <meta name="keywords"
+        content="Too many free trial accounts used on this machine. Please upgrade to pro. We have this limit in place to prevent abuse. Please let us know if you believe this is a mistake.">
     <meta name="author" content="MercyHacks">
     <meta name="robots" content="index, follow">
 
